// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarFormPresentation renders correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <form
    className="car-form border border-primary"
    onSubmit={[Function]}
>
    <div
        className="car-form-fields"
    >
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    name
                </span>
                <input
                    name="name"
                    onChange={[Function]}
                    type="text"
                    value="Audi"
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    acceleration
                </span>
                <input
                    name="acceleration"
                    onChange={[Function]}
                    type="number"
                    value={12}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    cylinders
                </span>
                <input
                    name="cylinders"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    displacement
                </span>
                <input
                    name="displacement"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    horsepower
                </span>
                <input
                    name="horsepower"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    mpg
                </span>
                <input
                    name="mpg"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    weight
                </span>
                <input
                    name="weight"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    year
                </span>
                <input
                    name="year"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
    </div>
    <div
        className="car-form-buttons"
    >
        <button
            className="text-primary"
            disabled={undefined}
            name="submit"
            type="submit"
        >
            Save
        </button>
        <button
            name="cancel"
            onClick={[Function]}
            type="button"
        >
            Cancel
        </button>
    </div>
</form>,
  "nodes": Array [
    <form
      className="car-form border border-primary"
      onSubmit={[Function]}
>
      <div
            className="car-form-fields"
      >
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              name
                        </span>
                        <input
                              name="name"
                              onChange={[Function]}
                              type="text"
                              value="Audi"
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              acceleration
                        </span>
                        <input
                              name="acceleration"
                              onChange={[Function]}
                              type="number"
                              value={12}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              cylinders
                        </span>
                        <input
                              name="cylinders"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              displacement
                        </span>
                        <input
                              name="displacement"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              horsepower
                        </span>
                        <input
                              name="horsepower"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              mpg
                        </span>
                        <input
                              name="mpg"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              weight
                        </span>
                        <input
                              name="weight"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              year
                        </span>
                        <input
                              name="year"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
      </div>
      <div
            className="car-form-buttons"
      >
            <button
                  className="text-primary"
                  disabled={undefined}
                  name="submit"
                  type="submit"
            >
                  Save
            </button>
            <button
                  name="cancel"
                  onClick={[Function]}
                  type="button"
            >
                  Cancel
            </button>
      </div>
</form>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CarFormPresentation
        car={
                Object {
                        "acceleration": 12,
                        "id": 1,
                        "name": "Audi",
                      }
        }
        errors={Object {}}
        model={
                Object {
                        "acceleration": Object {
                          "max": 100,
                          "min": 1,
                          "step": 0.1,
                          "type": "number",
                        },
                        "cylinders": Object {
                          "max": 16,
                          "min": 2,
                          "step": 1,
                          "type": "number",
                        },
                        "displacement": Object {
                          "max": 1000,
                          "min": 1,
                          "step": 1,
                          "type": "number",
                        },
                        "horsepower": Object {
                          "max": 1000,
                          "min": 40,
                          "step": 1,
                          "type": "number",
                        },
                        "mpg": Object {
                          "max": 100,
                          "min": 0,
                          "step": 1,
                          "type": "number",
                        },
                        "name": Object {
                          "type": "string",
                        },
                        "weight": Object {
                          "max": 10000,
                          "min": 500,
                          "step": 1,
                          "type": "number",
                        },
                        "year": Object {
                          "max": 99,
                          "min": 0,
                          "step": 1,
                          "type": "number",
                        },
                      }
        }
        onCancel={[Function]}
        onChangeField={[Function]}
        onSubmit={[Function]}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "car": Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          },
          "errors": Object {},
          "model": Object {
            "acceleration": Object {
              "max": 100,
              "min": 1,
              "step": 0.1,
              "type": "number",
            },
            "cylinders": Object {
              "max": 16,
              "min": 2,
              "step": 1,
              "type": "number",
            },
            "displacement": Object {
              "max": 1000,
              "min": 1,
              "step": 1,
              "type": "number",
            },
            "horsepower": Object {
              "max": 1000,
              "min": 40,
              "step": 1,
              "type": "number",
            },
            "mpg": Object {
              "max": 100,
              "min": 0,
              "step": 1,
              "type": "number",
            },
            "name": Object {
              "type": "string",
            },
            "weight": Object {
              "max": 10000,
              "min": 500,
              "step": 1,
              "type": "number",
            },
            "year": Object {
              "max": 99,
              "min": 0,
              "step": 1,
              "type": "number",
            },
          },
          "onCancel": [Function],
          "onChangeField": [Function],
          "onSubmit": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <form
          className="car-form border border-primary"
          onSubmit={[Function]}
>
          <div
                    className="car-form-fields"
          >
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  name
                                        </span>
                                        <input
                                                  name="name"
                                                  onChange={[Function]}
                                                  type="text"
                                                  value="Audi"
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  acceleration
                                        </span>
                                        <input
                                                  name="acceleration"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={12}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  cylinders
                                        </span>
                                        <input
                                                  name="cylinders"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  displacement
                                        </span>
                                        <input
                                                  name="displacement"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  horsepower
                                        </span>
                                        <input
                                                  name="horsepower"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  mpg
                                        </span>
                                        <input
                                                  name="mpg"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  weight
                                        </span>
                                        <input
                                                  name="weight"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  year
                                        </span>
                                        <input
                                                  name="year"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
          </div>
          <div
                    className="car-form-buttons"
          >
                    <button
                              className="text-primary"
                              disabled={undefined}
                              name="submit"
                              type="submit"
                    >
                              Save
                    </button>
                    <button
                              name="cancel"
                              onClick={[Function]}
                              type="button"
                    >
                              Cancel
                    </button>
          </div>
</form>,
        "_debugID": 2,
        "_renderedOutput": <form
          className="car-form border border-primary"
          onSubmit={[Function]}
>
          <div
                    className="car-form-fields"
          >
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  name
                                        </span>
                                        <input
                                                  name="name"
                                                  onChange={[Function]}
                                                  type="text"
                                                  value="Audi"
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  acceleration
                                        </span>
                                        <input
                                                  name="acceleration"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={12}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  cylinders
                                        </span>
                                        <input
                                                  name="cylinders"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  displacement
                                        </span>
                                        <input
                                                  name="displacement"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  horsepower
                                        </span>
                                        <input
                                                  name="horsepower"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  mpg
                                        </span>
                                        <input
                                                  name="mpg"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  weight
                                        </span>
                                        <input
                                                  name="weight"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  year
                                        </span>
                                        <input
                                                  name="year"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
          </div>
          <div
                    className="car-form-buttons"
          >
                    <button
                              className="text-primary"
                              disabled={undefined}
                              name="submit"
                              type="submit"
                    >
                              Save
                    </button>
                    <button
                              name="cancel"
                              onClick={[Function]}
                              type="button"
                    >
                              Cancel
                    </button>
          </div>
</form>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CarFormPresentation
    car={
        Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          }
    }
    errors={Object {}}
    model={
        Object {
            "acceleration": Object {
              "max": 100,
              "min": 1,
              "step": 0.1,
              "type": "number",
            },
            "cylinders": Object {
              "max": 16,
              "min": 2,
              "step": 1,
              "type": "number",
            },
            "displacement": Object {
              "max": 1000,
              "min": 1,
              "step": 1,
              "type": "number",
            },
            "horsepower": Object {
              "max": 1000,
              "min": 40,
              "step": 1,
              "type": "number",
            },
            "mpg": Object {
              "max": 100,
              "min": 0,
              "step": 1,
              "type": "number",
            },
            "name": Object {
              "type": "string",
            },
            "weight": Object {
              "max": 10000,
              "min": 500,
              "step": 1,
              "type": "number",
            },
            "year": Object {
              "max": 99,
              "min": 0,
              "step": 1,
              "type": "number",
            },
          }
    }
    onCancel={[Function]}
    onChangeField={[Function]}
    onSubmit={[Function]}
/>,
}
`;

exports[`CarFormPresentation renders correctly with field errors but cannot submit 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <form
    className="car-form border border-primary"
    onSubmit={[Function]}
>
    <div
        className="car-form-fields"
    >
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    name
                </span>
                <input
                    name="name"
                    onChange={[Function]}
                    type="text"
                    value="Audi"
                />
            </label>
            <span
                className="text-danger"
            >
                <small>
                    Not a good name
                </small>
            </span>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    acceleration
                </span>
                <input
                    name="acceleration"
                    onChange={[Function]}
                    type="number"
                    value={12}
                />
            </label>
            <span
                className="text-danger"
            >
                <small>
                    This car sucks
                </small>
            </span>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    cylinders
                </span>
                <input
                    name="cylinders"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    displacement
                </span>
                <input
                    name="displacement"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    horsepower
                </span>
                <input
                    name="horsepower"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    mpg
                </span>
                <input
                    name="mpg"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    weight
                </span>
                <input
                    name="weight"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
        <div
            className="car-form-field"
        >
            <label>
                <span
                    className="text-capitalize label-text"
                >
                    year
                </span>
                <input
                    name="year"
                    onChange={[Function]}
                    type="number"
                    value={undefined}
                />
            </label>
        </div>
    </div>
    <div
        className="car-form-buttons"
    >
        <button
            className="text-primary"
            disabled="name"
            name="submit"
            type="submit"
        >
            Save
        </button>
        <button
            name="cancel"
            onClick={[Function]}
            type="button"
        >
            Cancel
        </button>
    </div>
</form>,
  "nodes": Array [
    <form
      className="car-form border border-primary"
      onSubmit={[Function]}
>
      <div
            className="car-form-fields"
      >
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              name
                        </span>
                        <input
                              name="name"
                              onChange={[Function]}
                              type="text"
                              value="Audi"
                        />
                  </label>
                  <span
                        className="text-danger"
                  >
                        <small>
                              Not a good name
                        </small>
                  </span>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              acceleration
                        </span>
                        <input
                              name="acceleration"
                              onChange={[Function]}
                              type="number"
                              value={12}
                        />
                  </label>
                  <span
                        className="text-danger"
                  >
                        <small>
                              This car sucks
                        </small>
                  </span>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              cylinders
                        </span>
                        <input
                              name="cylinders"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              displacement
                        </span>
                        <input
                              name="displacement"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              horsepower
                        </span>
                        <input
                              name="horsepower"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              mpg
                        </span>
                        <input
                              name="mpg"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              weight
                        </span>
                        <input
                              name="weight"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
            <div
                  className="car-form-field"
            >
                  <label>
                        <span
                              className="text-capitalize label-text"
                        >
                              year
                        </span>
                        <input
                              name="year"
                              onChange={[Function]}
                              type="number"
                              value={undefined}
                        />
                  </label>
            </div>
      </div>
      <div
            className="car-form-buttons"
      >
            <button
                  className="text-primary"
                  disabled="name"
                  name="submit"
                  type="submit"
            >
                  Save
            </button>
            <button
                  name="cancel"
                  onClick={[Function]}
                  type="button"
            >
                  Cancel
            </button>
      </div>
</form>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CarFormPresentation
        car={
                Object {
                        "acceleration": 12,
                        "id": 1,
                        "name": "Audi",
                      }
        }
        errors={
                Object {
                        "acceleration": "This car sucks",
                        "name": "Not a good name",
                      }
        }
        model={
                Object {
                        "acceleration": Object {
                          "max": 100,
                          "min": 1,
                          "step": 0.1,
                          "type": "number",
                        },
                        "cylinders": Object {
                          "max": 16,
                          "min": 2,
                          "step": 1,
                          "type": "number",
                        },
                        "displacement": Object {
                          "max": 1000,
                          "min": 1,
                          "step": 1,
                          "type": "number",
                        },
                        "horsepower": Object {
                          "max": 1000,
                          "min": 40,
                          "step": 1,
                          "type": "number",
                        },
                        "mpg": Object {
                          "max": 100,
                          "min": 0,
                          "step": 1,
                          "type": "number",
                        },
                        "name": Object {
                          "type": "string",
                        },
                        "weight": Object {
                          "max": 10000,
                          "min": 500,
                          "step": 1,
                          "type": "number",
                        },
                        "year": Object {
                          "max": 99,
                          "min": 0,
                          "step": 1,
                          "type": "number",
                        },
                      }
        }
        onCancel={[Function]}
        onChangeField={[Function]}
        onSubmit={[Function]}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "car": Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          },
          "errors": Object {
            "acceleration": "This car sucks",
            "name": "Not a good name",
          },
          "model": Object {
            "acceleration": Object {
              "max": 100,
              "min": 1,
              "step": 0.1,
              "type": "number",
            },
            "cylinders": Object {
              "max": 16,
              "min": 2,
              "step": 1,
              "type": "number",
            },
            "displacement": Object {
              "max": 1000,
              "min": 1,
              "step": 1,
              "type": "number",
            },
            "horsepower": Object {
              "max": 1000,
              "min": 40,
              "step": 1,
              "type": "number",
            },
            "mpg": Object {
              "max": 100,
              "min": 0,
              "step": 1,
              "type": "number",
            },
            "name": Object {
              "type": "string",
            },
            "weight": Object {
              "max": 10000,
              "min": 500,
              "step": 1,
              "type": "number",
            },
            "year": Object {
              "max": 99,
              "min": 0,
              "step": 1,
              "type": "number",
            },
          },
          "onCancel": [Function],
          "onChangeField": [Function],
          "onSubmit": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <form
          className="car-form border border-primary"
          onSubmit={[Function]}
>
          <div
                    className="car-form-fields"
          >
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  name
                                        </span>
                                        <input
                                                  name="name"
                                                  onChange={[Function]}
                                                  type="text"
                                                  value="Audi"
                                        />
                              </label>
                              <span
                                        className="text-danger"
                              >
                                        <small>
                                                  Not a good name
                                        </small>
                              </span>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  acceleration
                                        </span>
                                        <input
                                                  name="acceleration"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={12}
                                        />
                              </label>
                              <span
                                        className="text-danger"
                              >
                                        <small>
                                                  This car sucks
                                        </small>
                              </span>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  cylinders
                                        </span>
                                        <input
                                                  name="cylinders"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  displacement
                                        </span>
                                        <input
                                                  name="displacement"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  horsepower
                                        </span>
                                        <input
                                                  name="horsepower"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  mpg
                                        </span>
                                        <input
                                                  name="mpg"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  weight
                                        </span>
                                        <input
                                                  name="weight"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  year
                                        </span>
                                        <input
                                                  name="year"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
          </div>
          <div
                    className="car-form-buttons"
          >
                    <button
                              className="text-primary"
                              disabled="name"
                              name="submit"
                              type="submit"
                    >
                              Save
                    </button>
                    <button
                              name="cancel"
                              onClick={[Function]}
                              type="button"
                    >
                              Cancel
                    </button>
          </div>
</form>,
        "_debugID": 4,
        "_renderedOutput": <form
          className="car-form border border-primary"
          onSubmit={[Function]}
>
          <div
                    className="car-form-fields"
          >
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  name
                                        </span>
                                        <input
                                                  name="name"
                                                  onChange={[Function]}
                                                  type="text"
                                                  value="Audi"
                                        />
                              </label>
                              <span
                                        className="text-danger"
                              >
                                        <small>
                                                  Not a good name
                                        </small>
                              </span>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  acceleration
                                        </span>
                                        <input
                                                  name="acceleration"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={12}
                                        />
                              </label>
                              <span
                                        className="text-danger"
                              >
                                        <small>
                                                  This car sucks
                                        </small>
                              </span>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  cylinders
                                        </span>
                                        <input
                                                  name="cylinders"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  displacement
                                        </span>
                                        <input
                                                  name="displacement"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  horsepower
                                        </span>
                                        <input
                                                  name="horsepower"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  mpg
                                        </span>
                                        <input
                                                  name="mpg"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  weight
                                        </span>
                                        <input
                                                  name="weight"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
                    <div
                              className="car-form-field"
                    >
                              <label>
                                        <span
                                                  className="text-capitalize label-text"
                                        >
                                                  year
                                        </span>
                                        <input
                                                  name="year"
                                                  onChange={[Function]}
                                                  type="number"
                                                  value={undefined}
                                        />
                              </label>
                    </div>
          </div>
          <div
                    className="car-form-buttons"
          >
                    <button
                              className="text-primary"
                              disabled="name"
                              name="submit"
                              type="submit"
                    >
                              Save
                    </button>
                    <button
                              name="cancel"
                              onClick={[Function]}
                              type="button"
                    >
                              Cancel
                    </button>
          </div>
</form>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CarFormPresentation
    car={
        Object {
            "acceleration": 12,
            "id": 1,
            "name": "Audi",
          }
    }
    errors={
        Object {
            "acceleration": "This car sucks",
            "name": "Not a good name",
          }
    }
    model={
        Object {
            "acceleration": Object {
              "max": 100,
              "min": 1,
              "step": 0.1,
              "type": "number",
            },
            "cylinders": Object {
              "max": 16,
              "min": 2,
              "step": 1,
              "type": "number",
            },
            "displacement": Object {
              "max": 1000,
              "min": 1,
              "step": 1,
              "type": "number",
            },
            "horsepower": Object {
              "max": 1000,
              "min": 40,
              "step": 1,
              "type": "number",
            },
            "mpg": Object {
              "max": 100,
              "min": 0,
              "step": 1,
              "type": "number",
            },
            "name": Object {
              "type": "string",
            },
            "weight": Object {
              "max": 10000,
              "min": 500,
              "step": 1,
              "type": "number",
            },
            "year": Object {
              "max": 99,
              "min": 0,
              "step": 1,
              "type": "number",
            },
          }
    }
    onCancel={[Function]}
    onChangeField={[Function]}
    onSubmit={[Function]}
/>,
}
`;
